Moved images to "img" subfolder. Global stylesheet now set in JfxApp#start instead of main to avoid "toolkit not initialized" error when running as jar. Got rid of DEV_MODE.